# charton

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: ci.yml  deploy.yml  mdbook.yml
assets/: notebook.ipynb
docs/: book.toml  reddit.md  tutorial.md
docs/book/: 404.html  GETTING_STARTED.html  index.html  print.html  searcher-c2a407aa.js  searchindex-fe93cd16.js  toc-454c3ecb.js  toc.html
docs/book/advanced/: integration.html  layout.html  transformation.html  web_wasm.html
docs/book/concepts/: architecture.html  data_engine.html
docs/book/gallery/: area_charts.html  bar_charts.html  box_violin_charts.html  calendar_plots.html  circular_charts.html  concatenation.html  custom_logic.html  distributions.html  faceting.html  geospatial.html  heatmaps.html  interactivity.html  layering.html  line_charts.html  point_charts.html  ranges_gantt.html  scatter_matrices.html  time_series.html  uncertainties_and_trends.html
docs/book/grammar/: coordinates.html  encoding.html  marks.html
docs/book/style/: styling_model.html
docs/book/styling/: axes_styling.html  colors.html  themes.html
docs/src/: GETTING_STARTED.md  README.md  SUMMARY.md  SUMMARY_v2.md
docs/src/Styling/: colors.md  styling_model.md  themes.md
docs/src/advanced/: integration.md  layout.md  web_wasm.md
docs/src/advanced/Styling/: axes_styling.md  themes.md
docs/src/appendix/: wgpu_text.md
docs/src/case_studies/: biomedicine.md  lorenz _attractor.md  lorenz_attractor.md  system_monitor.md
docs/src/charts/: comparisons.md
docs/src/concepts/: architecture.md  chart_life.md  gpu.md  mental_model.md  rendering.md  scale_arbitration.md  wgpu_renderer.md
docs/src/engine/: column_vector.md  dataset_core.md  ingestion.md  temporal.md
docs/src/gallery/: area_charts.md  box_violin_charts.md  gallery.md  tick_chart.md  uncertainties_and_trends.md
docs/src/get_started/: installation.md
docs/src/getting_started/: installation.md  notebook.md  quick_start.md
docs/src/grammar/: coordinates.md  encoding.md  encodings.md  marks.md  scales.md  temporal.md  temporal_engine.md
docs/src/gui/: bevy.md  concepts.md  egui.md  winit_decoupled.md  zero_copy.md
docs/src/guides_layout/: temporal_tick_formatting.md
docs/src/industrial/: performance.md  production.md  safety.md  themes.md
docs/src/ipc/: python_interop.md
docs/src/layout/: guids.md  layering.md  space.md
docs/src/style/: styling_model.md
docs/src/web/: vegalite_json.md  wasm_cpu_svg.md  wasm_gpu_wgpu.md  wasm_runtime.md
examples/: 2d_density.rs  2d_density_wgpu.rs  altair.rs  area.rs  area_wgpu.rs  bar_with_errorbar.rs  bar_with_errorbar_wgpu.rs  base.rs  base_chart.rs  beeswarm.rs  cumulative_frequency.rs  custom_palette.rs  density.rs  density_wgpu.rs  distribution.rs  distribution_wgpu.rs  donut.rs  donut_chart.rs  errorbar.rs  figure1a.rs  frontend.rs  geo_islands.rs  grid_line.rs  grouped_bar.rs  grouped_bar_chart.rs  grouped_bar_with_errorbar.rs  grouped_bar_with_errorbar_1.rs  grouped_bar_with_errorbar_2.rs  grouped_boxplot.rs  grouped_boxplot_wgpu.rs  heatmap.rs  heatmap_wgpu.rs  histogram.rs  industry_altair.rs  line.rs  line_wgpu.rs  line_with_error.rs  line_with_errorbar.rs  log_scale.rs  matplotlib.rs  (+27 more)
src/: Cargo.toml  axis.rs  base.rs  bridge.rs  chart.rs  chart2.rs  chart3.rs  coord.rs  coordinate.rs  core.rs  data.rs  datasets.rs  encode.rs  error.rs  facets.rs  lib.rs  macros.rs  mark.rs  render.rs  scale.rs  stats.rs  theme.rs  transform.rs  visual.rs
src/base/: composite.rs  context.rs  layer.rs
src/bridge/: altair.rs  converter.rs  py_session.rs  python.rs  r.rs
src/bridge/python/: altair.rs  matplotlib.rs
src/chart/: arc_chart.rs  area_chart.rs  bar_chart.rs  box_chart.rs  common.rs  data_processor.rs  errorbar_chart.rs  geo_chart.rs  hist_chart.rs  line_chart.rs  pie_chart.rs  point_chart.rs  rect_chart.rs  rule_chart.rs  text_chart.rs  tick_chart.rs  visual_processor.rs
src/coord/: cartesian.rs  polar.rs  time.rs
src/coordinate/: cartesian.rs  geo.rs  polar.rs
src/core/: aesthetics.rs  composite.rs  context.rs  conversion.rs  data.rs  guide.rs  layer.rs  layout.rs  legend.rs  utils.rs
src/datasets/: iris.rs  mpg.rs  mtcars.rs  nightingale.rs  penguins.rs  unemployment.rs
src/encode/: aesthetics.rs  color.rs  encoding.rs  opacity.rs  path_group.rs  shape.rs  size.rs  stroke.rs  stroke_width.rs  text.rs  theta.rs  x.rs  y.rs  y2.rs
src/facets/: engine.rs  facet_grid.rs  facet_wrap.rs
src/mark/: arc.rs  area.rs  bar.rs  boxplot.rs  errorbar.rs  geo_path.rs  histogram.rs  line.rs  no_mark.rs  point.rs  rect.rs  rule.rs  text.rs  tick.rs
src/render/: arc_renderer.rs  area_renderer.rs  axis_renderer.rs  backend.rs  bar_renderer.rs  box_renderer.rs  cartesian2d_axis_renderer.rs  color_legend_renderer.rs  colorbar.rs  colorbar_renderer.rs  constants.rs  errorbar_renderer.rs  geo_axis_renderer.rs  geo_renderer.rs  guide_renderer.rs  hist_renderer.rs  legend_renderer.rs  line_renderer.rs  point_renderer.rs  polar_axis_renderer.rs  rect_renderer.rs  rule_renderer.rs  shape_legend_renderer.rs  size_legend_renderer.rs  text_renderer.rs  tick_renderer.rs  utils.rs  wgpu_renderer.rs
src/render/backend/: chart.wgsl  raster.rs  svg.rs  wgpu.rs
src/scale/: discrete.rs  linear.rs  log.rs  mapper.rs  temporal.rs
src/stats/: stat_binning.rs  stat_loess.rs
src/transform/: area_transform.rs  bar_transform.rs  box_tranform.rs  calculate.rs  calculate_transform.rs  density.rs  density_transform.rs  errorbar_transform.rs  hist_transform.rs  point_transform.rs  rect_transform.rs  window.rs  window_transform.rs
src/visual/: color.rs  shape.rs
tests/: Cargo.toml  test_altair.rs  test_area.rs  test_bar.rs  test_base.rs  test_boxplot.rs  test_dataset_select.rs  test_empty.rs  test_errorbar.rs  test_histogram.rs  test_line.rs  test_palette.rs  test_pie.rs  test_rect.rs  test_rule.rs  test_scatter.rs  test_text.rs  test_tick.rs  test_to_svg.rs  test_transform_calculate.rs  test_transform_window.rs
