[package]
name = "charton"
version = "0.5.0"
edition = "2024"
description = "A high-performance, layered charting system for Rust, featuring a flexible data core and multi-backend rendering."
license = "Apache-2.0"
repository = "https://github.com/wangjiawen2013/charton"
authors = ["Jiawen Wang <wangjiawen2013@163.com>"]

[features]
# Default features enabled for standard desktop builds.
default = ["parallel"]

# Enables universal columnar data ingestion via the Apache Arrow standard.
arrow = ["dep:arrow"]

# Enables compatibility with visualization ecosystems (e.g., Matplotlib, Altair).
bridge = ["dep:polars", "dep:serde", "dep:serde_json", "dep:base64", "resvg"]

# Enables multi-threaded data processing via Rayon for massive datasets.
# NOTE: Disable this feature when targeting WebAssembly (Wasm) unless 
# using a specialized thread-pool adapter like wasm-bindgen-rayon.
parallel = ["dep:rayon"]

# Enables exporting SVG to PNG format using the resvg rendering engine.
resvg = ["dep:resvg"]

[dependencies]
# --- Optional Dependencies ---
arrow = { version = "58.1", default-features = false, optional = true }
polars = { version = "0.53", default-features = false, features = ["lazy", "parquet", "ipc"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
rayon = { version = "1.11", optional = true }
resvg = { version = "0.47", optional = true }

# --- Core Dependencies ---
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "formatting"] }
kernel-density-estimation = "0.2"
ahash = "0.8"
csscolorparser = "0.8"
html-escape = "0.2"