[package]
name = "charton"
version = "0.5.3"
edition = "2024"
description = "A high-performance, layered charting system for Rust, featuring a flexible data core and multi-backend rendering."
license = "Apache-2.0"
repository = "https://github.com/wangjiawen2013/charton"
authors = ["Jiawen Wang <wangjiawen2013@163.com>"]

[features]
# Default features enabled for standard desktop builds.
default = ["png2"]

# Enables multi-threaded data processing via Rayon for massive datasets.
# NOTE: Disable this feature when targeting WebAssembly (Wasm) unless 
# using a specialized thread-pool adapter like wasm-bindgen-rayon.
parallel = ["dep:rayon"]

# Enables exporting SVG to PDF format using the usvg rendering engine.
pdf = ["dep:svg2pdf"]

# Enables high-performance raster rendering (PNG, etc.)
raster = ["dep:tiny-skia", "dep:ab-glyph"]
png2 = ["raster"] # png is an alias of raster

# Enables universal columnar data ingestion via the Apache Arrow standard.
arrow = ["dep:arrow"]

# Enables compatibility with visualization ecosystems (e.g., Matplotlib, Altair).
bridge = ["dep:polars", "dep:serde", "dep:serde_json", "dep:base64"]

[dependencies]
# --- Core Dependencies ---
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "formatting"] }
kernel-density-estimation = "0.2"
ahash = "0.8"
csscolorparser = "0.8"
html-escape = "0.2"

# --- Optional Dependencies ---
rayon = { version = "1.11", optional = true }
svg2pdf = { version = "0.13", optional = true }
tiny-skia = { version = "0.12", optional = true }
ab-glyph = { version = "0.2", optional = true }
arrow = { version = "58.1", default-features = false, optional = true }
polars = { version = "0.53", default-features = false, features = ["lazy", "parquet", "ipc"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22", optional = true }
